internal-services/buildkit/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkit
spec:
  selector:
    app.kubernetes.io/name: buildkit
  ports:
    - name: grpc
      port: 1234
      targetPort: grpc
